final version (static)

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Sign Up</a></li>
-        <li><a href="#">Login</a></li>
+        <li><a href="#">Sign Up <i class="fa fa-user-plus" aria-hidden="true"></i></a></li>
+        <li><a href="#">Login <i class="fa fa-user" aria-hidden="true"></i></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -44,7 +44,7 @@
 					<h1>Landing Page</h1>
 					<h3>An example of a Bootstrap landing page</h3>
 					<hr>
-					<button class="btn btn-default btn-lg">Get Started</button>
+					<button class="btn btn-default btn-lg"><i class="fa fa-bullseye" aria-hidden="true"></i> Get Started</button>
 				</div>
 			</div>
 		</div>
@@ -56,5 +56,6 @@
   crossorigin="anonymous">
 </script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://use.fontawesome.com/584b8ebdde.js"></script>
 </body>
 </html>
